--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <FrameLayout
+        android:id="@+id/mainContainerFrameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/indexViewLine" />
 
-</android.support.constraint.ConstraintLayout>
+    <View
+        android:id="@+id/indexViewLine"
+        android:layout_width="match_parent"
+        android:layout_height="0.75dp"
+        android:layout_above="@+id/indexRadioGroup"
+        android:background="#dadada"></View>
+
+    <RadioGroup
+        android:id="@+id/indexRadioGroup"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/dynamicRB"
+            style="@style/IndexRadio"
+            android:checked="true"
+            android:drawableTop="@mipmap/icon_dongtai"
+            android:text="动态"
+            android:textSize="@dimen/sp_12" />
+
+        <RadioButton
+            android:id="@+id/talentRB"
+            style="@style/IndexRadio"
+            android:drawableTop="@mipmap/icon_daren"
+            android:text="达人"
+            android:textSize="@dimen/sp_12" />
+
+        <RadioButton
+            android:id="@+id/mineRB"
+            style="@style/IndexRadio"
+            android:drawableTop="@mipmap/icon_wode"
+            android:text="我的"
+            android:textSize="@dimen/sp_12" />
+
+    </RadioGroup>
+
+</RelativeLayout>
