--- a/common-library/src/main/res/values/colors.xml
+++ b/common-library/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="toolBarBg">#ffffff</color>
-    <color name="swiperRefreshThemeColor">#ff5555</color>
+    <color name="color_ff5555">#ff5555</color>
     <color name="color_ef8c36">#EF8C36</color>
+    <color name="color_333333">#333333</color>
+    <color name="color_666666">#666666</color>
 </resources>
