--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,10 @@
 
 
     <color name="color_ff5555">#ff5555</color>
+    <color name="color_ffffff">#ffffff</color>
     <color name="color_333333">#333333</color>
+    <color name="color_888888">#888888</color>
+    <color name="color_dadada">#dadada</color>
 
 
 </resources>
