--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -5,25 +5,83 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@color/color_ffffff">
+
+        <ImageView
+            android:id="@+id/mineHeadImg"
+            android:layout_width="@dimen/dp50"
+            android:layout_height="@dimen/dp50"
+            android:layout_centerInParent="true"
+            android:src="@drawable/ic_launcher_round" />
+
+        <TextView
+            android:id="@+id/mineNickNameTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/mineHeadImg"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/dp10"
+            android:text="爱吃糖的羊"
+            android:textColor="@color/color_333333"
+            android:textSize="@dimen/sp_14"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/mineNickNameTxt"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/dp10"
+            android:text="找模特，找模特，找模特，找模特" />
+
+    </RelativeLayout>
+
+    <include layout="@layout/view_horizontal_space" />
+
     <xkh.hzp.xkh.com.base.view.ItemLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp45"
+        android:layout_height="@dimen/dp50"
         android:gravity="center_vertical"
         app:leftIcon="@drawable/ic_launcher_round"
-        app:leftTitleTextSize="14"
-        app:leftTitleTxt="我要加盟"
-        app:rightTitleTxt="15068789569" />
+        app:leftTitleTxt="我的消息" />
 
     <include layout="@layout/view_line_horientol" />
 
     <xkh.hzp.xkh.com.base.view.ItemLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp45"
+        android:layout_height="@dimen/dp50"
         android:gravity="center_vertical"
         app:leftIcon="@drawable/ic_launcher_round"
-        app:leftTitleTextSize="14"
-        app:leftTitleTxt="我要加盟"
-        app:rightTitleTxt="15068789569" />
+        app:leftTitleTxt="加入达人" />
 
+    <include layout="@layout/view_line_horientol" />
+
+    <xkh.hzp.xkh.com.base.view.ItemLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp50"
+        android:gravity="center_vertical"
+        app:leftIcon="@drawable/ic_launcher_round"
+        app:leftTitleTxt="商务合作" />
+
+    <include layout="@layout/view_horizontal_space" />
+
+    <xkh.hzp.xkh.com.base.view.ItemLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp50"
+        android:gravity="center_vertical"
+        app:leftIcon="@drawable/ic_launcher_round"
+        app:leftTitleTxt="修改资料" />
+
+    <include layout="@layout/view_line_horientol" />
+
+    <xkh.hzp.xkh.com.base.view.ItemLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp50"
+        android:gravity="center_vertical"
+        app:leftIcon="@drawable/ic_launcher_round"
+        app:leftTitleTxt="设置" />
 
 </LinearLayout>
