--- a/app/src/main/res/layout/view_line_horientol.xml
+++ b/app/src/main/res/layout/view_line_horientol.xml
@@ -2,4 +2,6 @@
 <View xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="0.75dp"
+    android:layout_marginLeft="@dimen/dp10"
+    android:layout_marginRight="@dimen/dp10"
     android:background="#dadada"></View>
