--- a/common-library/src/main/res/values/dimens.xml
+++ b/common-library/src/main/res/values/dimens.xml
@@ -9,11 +9,16 @@
     <dimen name="dp10">10dp</dimen>
     <dimen name="dp15">15dp</dimen>
     <dimen name="dp20">20dp</dimen>
+    <dimen name="dp25">25dp</dimen>
     <dimen name="dp32">32dp</dimen>
     <dimen name="dp30">30dp</dimen>
     <dimen name="dp35">35dp</dimen>
     <dimen name="dp40">40dp</dimen>
     <dimen name="dp45">45dp</dimen>
+    <dimen name="dp48">48dp</dimen>
     <dimen name="dp50">50dp</dimen>
+    <dimen name="dp60">60dp</dimen>
+    <dimen name="dp75">60dp</dimen>
+    <dimen name="banner">140dp</dimen>
 
 </resources>
