用户资料页面开发

--- a/app/src/main/res/layout/view_item_talent_picture.xml
+++ b/app/src/main/res/layout/view_item_talent_picture.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:id="@+id/itemContentLayout"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <View
-        android:id="@+id/telentPictureSpaceView"
+        android:id="@+id/startTelentPictureSpaceView"
         android:layout_width="@dimen/dp10"
         android:layout_height="wrap_content" />
 
@@ -15,5 +16,11 @@
         android:layout_height="300dp"
         android:scaleType="fitXY"
         android:src="@drawable/example" />
+
+    <View
+        android:id="@+id/stopTelentPictureSpaceView"
+        android:layout_width="@dimen/dp10"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 
 </LinearLayout>
