--- a/app/src/main/res/layout/fragment_people_profile.xml
+++ b/app/src/main/res/layout/fragment_people_profile.xml
@@ -7,7 +7,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/talentPictureRecycleView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp10">
 
     </android.support.v7.widget.RecyclerView>
 
