--- a/app/src/main/res/layout/view_item_dynamic.xml
+++ b/app/src/main/res/layout/view_item_dynamic.xml
@@ -62,7 +62,6 @@
     </LinearLayout>
 
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -84,7 +83,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/icon_share_gry" />
+                android:src="@mipmap/icon_share_red" />
 
 
             <TextView
@@ -107,7 +106,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/icon_share_gry" />
+                android:src="@mipmap/icon_share_red" />
 
 
             <TextView
@@ -130,7 +129,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:scaleType="centerCrop"
-                android:src="@mipmap/icon_share_gry" />
+                android:src="@mipmap/icon_share_red" />
 
 
             <TextView
