--- a/app/src/main/res/layout/fragment_dynamic.xml
+++ b/app/src/main/res/layout/fragment_dynamic.xml
@@ -8,10 +8,10 @@
     <LinearLayout
         android:id="@+id/searchLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp75"
+        android:layout_height="@dimen/dp48"
         android:background="@color/color_ff5555"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:paddingTop="@dimen/dp25"
         android:visibility="visible">
 
         <TextView
@@ -37,7 +37,6 @@
 
     </LinearLayout>
 
-
     <ru.noties.scrollable.ScrollableLayout
         android:id="@+id/scrollable_layout"
         android:layout_width="match_parent"
@@ -45,11 +44,10 @@
         app:scrollable_autoMaxScroll="true"
         app:scrollable_defaultCloseUp="true">
 
-
         <com.youth.banner.Banner
             android:id="@+id/headerBanner"
             android:layout_width="match_parent"
-            android:layout_height="160dp" />
+            android:layout_height="200dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -87,6 +85,5 @@
 
 
     </ru.noties.scrollable.ScrollableLayout>
-
 
 </LinearLayout>
