--- a/app/src/main/res/layout/fragment_talent.xml
+++ b/app/src/main/res/layout/fragment_talent.xml
@@ -7,10 +7,10 @@
     <LinearLayout
         android:id="@+id/searchLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp75"
+        android:layout_height="@dimen/dp48"
         android:background="@color/color_ff5555"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingTop="@dimen/dp25"
         android:visibility="visible">
 
         <TextView
@@ -32,9 +32,7 @@
             android:layout_weight="0"
             android:src="@mipmap/icon_msg_white" />
 
-
     </LinearLayout>
-
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/talentSwipeRefreshLayout"
