--- a/app/src/main/res/layout/fragment_talent.xml
+++ b/app/src/main/res/layout/fragment_talent.xml
@@ -8,7 +8,7 @@
         android:id="@+id/searchLayout"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp48"
-        android:background="@color/color_ff5555"
+        android:background="@color/color_fb435b"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:visibility="visible">
