--- a/app/src/main/res/drawable/shape_search.xml
+++ b/app/src/main/res/drawable/shape_search.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#ffffff" />
+    <solid android:color="#7fffffff" />
     <corners
         android:bottomLeftRadius="@dimen/dp15"
         android:bottomRightRadius="@dimen/dp15"
