功能开发，商务合作，加入我们

--- a/app/src/main/res/layout/activity_business_cooperation.xml
+++ b/app/src/main/res/layout/activity_business_cooperation.xml
@@ -98,8 +98,7 @@
             android:layout_weight="1"
             android:background="@drawable/shape_edit_join_us"
             android:gravity="top"
-            android:paddingLeft="@dimen/dp4"
-            android:text="111" />
+            android:paddingLeft="@dimen/dp4" />
 
     </LinearLayout>
 
